Update ml_pipeline.yml to have tag flag

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -25,7 +25,9 @@ variables:
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
-    MODEL_LOCATION: ${EOS_STORAGE_DIR}/tags/v0.0.0/model
+    MODEL_LOCATION: ${EOS_STORAGE_DIR}/tags/${TAG}/model
+    RERUN_ON_TAG: True 
+    TAG: v0.0.0
 
 .template:
   image: gitlab-registry.cern.ch/ml_l1/ops/docker-images/mamba_jettagger:latest
@@ -73,9 +75,7 @@ train:
     - job : data
       optional: true
   rules:
-    - changes:  # Include the job if any of the follow paths match a modified file.
-        - tagger/train/**
-        - tagger/data/**
+    - if: $RERUN_ON_TAG == "False"
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -242,7 +242,7 @@ profile:
       - output/baseline
     expire_in: 1 day
 
-upload:
+upload_new_model:
   image: gitlab-registry.cern.ch/ml_l1/ops/docker-images/mamba_jettagger:latest
   stage: upload
   tags: [k8s-gpu]
@@ -252,6 +252,8 @@ upload:
   needs:
     job: emulation-evaluate,hls4ml,train,evaluate,profile
     optional : true
+  rules:
+    - if: $RERUN_ON_TAG == "False"
   before_script:
     - export PYTHONPATH=/builds/ml_l1/TrainTagger:$PYTHONPATH
     - echo "$AUTO_DEVOPS_CERNBOX_PASS" | kinit "$AUTO_DEVOPS_CERNBOX_USER@CERN.CH" > /dev/null
@@ -263,9 +265,6 @@ upload:
     - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cp -r L1TSC4NGJetModel.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}/firmware/
     - cd ../..
-    - cd output/baseline/model
-    - eos cp ${MODEL_LOCATION}/saved_model.h5 .
-    - cd ../../..
     - mkdir $Name/plots
     - cp -r output/baseline/model $Name/model
     - mv output/baseline/plots/emulation $Name/plots
@@ -290,6 +289,48 @@ upload:
       -n ${Name}
     - eos rm ${EOS_STORAGE_DIR}/branches/${CI_COMMIT_REF_SLUG}/${Name}/latest || true
     - eos ln ${EOS_STORAGE_DIR}/branches/${CI_COMMIT_REF_SLUG}/${Name}/latest ${EOS_STORAGE_DIR}/${EOS_STORAGE_SUBDIR}
+  artifacts:
+    paths:
+      - $Name
+    expire_in: 1 day
+
+
+upload_tagged_model:
+  image: gitlab-registry.cern.ch/ml_l1/ops/docker-images/mamba_jettagger:latest
+  stage: upload
+  tags: [k8s-gpu]
+  variables:
+    KUBERNETES_MEMORY_REQUEST: 4Gi
+    KUBERNETES_CPU_REQUEST: 1
+  needs:
+    job: emulation-evaluate,hls4ml,train,evaluate,profile
+    optional : true
+  rules:
+    - if: $RERUN_ON_TAG == "True"
+  before_script:
+    - export PYTHONPATH=/builds/ml_l1/TrainTagger:$PYTHONPATH
+    - echo "$AUTO_DEVOPS_CERNBOX_PASS" | kinit "$AUTO_DEVOPS_CERNBOX_USER@CERN.CH" > /dev/null
+  script:
+    - source activate tagger
+    - mkdir $Name
+    - cd tagger/firmware
+    - tar -cvf L1TSC4NGJetModel.tgz L1TSC4NGJetModel
+    - cp -r L1TSC4NGJetModel.tgz ${EOS_STORAGE_DIR}/tags/${TAG}/firmware/
+    - cd ../..
+    - mkdir $Name/plots
+    - cp -r output/baseline/model $Name/model
+    - mv output/baseline/plots/emulation $Name/plots
+    - mv output/baseline/plots/profile $Name/plots
+    - mv output/baseline/plots/training/ $Name/plots
+    - mv output/baseline/plots/physics/ $Name/plots
+    - cd ..
+    - rm -rf php-plots
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.cern.ch/cms-analysis/general/php-plots.git -b feature/update_extension_grouping
+    - export PATH="${PATH}:/builds/ml_l1/php-plots/bin" 
+    - pb_copy_index.py TrainTagger/${Name} --recursive
+    - pb_copy_index.py ${EOS_STORAGE_DIR} --recursive
+    - cd TrainTagger/${Name} 
+    - pb_deploy_plots.py plots ${EOS_STORAGE_DIR}/tags/${TAG}/ --recursive --extensions png,pdf
   artifacts:
     paths:
       - $Name
