--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -86,6 +86,32 @@ train:
       - .npy
     expire_in: 1 day
 
+train_basic_plots:
+  extends:
+    - .template
+  stage: train
+  needs: 
+    - job : data
+      optional: true
+  rules:
+    - if: $RERUN_ON_TAG == "True"
+  script:
+  - mkdir output/baseline/model
+  - cd output/baseline/model
+  - eos cp ${MODEL_LOCATION}/saved_model.h5 .
+  - cd ../../..
+  - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
+  - tar -xf training_data_$Inputs.tgz
+  - source activate tagger
+  - python tagger/train/train.py --plot-basic -n $Name
+  artifacts:
+    paths:
+      - output
+      - mlflow_run_id.txt
+    exclude:
+      - .npy
+    expire_in: 1 day
+
 evaluate:
   extends:
     - .template
@@ -94,9 +120,7 @@ evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 32Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: 
-    - job : train
-      optional : true
+  needs: [train]
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -144,9 +168,7 @@ hls4ml:
   extends:
     - .template
   stage: hls4ml
-  needs: 
-    - job : train
-      optional : true
+  needs: train
   script:
   - source activate tagger
   - cd output/baseline/model
@@ -163,9 +185,7 @@ synth:
     - fpga-large
   image: registry.cern.ch/ci4fpga/vivado:2023.2
   stage: synth
-  needs: 
-    - job : hls4ml
-      optional: true
+  needs: hls4ml
   script:
     - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
@@ -184,10 +204,7 @@ emulation-evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: 
-    - job: emulate,train,hls4ml
-      optional : true
-  dependencies: [emulate,train,hls4ml]
+  needs: [emulate,train,hls4ml]
   script:
   - mkdir data
   - cd data
@@ -211,10 +228,7 @@ profile:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: 
-    - job: emulate,train,hls4ml
-      optional : true
-  dependencies: [emulate,synth,train]
+  needs: [emulate,train,hls4ml]
   script:
   - source activate tagger
   - mkdir data
@@ -243,9 +257,7 @@ upload_new_model:
   variables:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
-  needs:
-    job: emulation-evaluate,hls4ml,train,evaluate,profile
-    optional : true
+  needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
   rules:
     - if: $RERUN_ON_TAG == "False"
   before_script:
@@ -297,7 +309,6 @@ upload_tagged_model:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
   needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
-  dependencies: [emulation-evaluate,hls4ml,train,evaluate,profile]
   rules:
     - if: $RERUN_ON_TAG == "True"
   before_script:
