--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -188,7 +188,7 @@ synth:
     - fpga-large
   image: registry.cern.ch/ci4fpga/vivado:2023.2
   stage: synth
-  needs: hls4ml
+  needs: [hls4ml]
   script:
     - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
