--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -171,7 +171,7 @@ hls4ml:
   extends:
     - .template
   stage: hls4ml
-  needs: train
+  needs: [train]
   script:
   - source activate tagger
   - cd output/baseline/model
@@ -188,7 +188,7 @@ synth:
     - fpga-large
   image: registry.cern.ch/ci4fpga/vivado:2023.2
   stage: synth
-  needs: hls4ml
+  needs: [hls4ml]
   script:
     - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
