--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -120,7 +120,11 @@ evaluate:
   variables:
     KUBERNETES_MEMORY_REQUEST: 32Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [train]
+  needs:
+    - job: train
+      optional: true
+    - job: train_basic_plots
+      optional: true
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
   - tar -xf training_data_$Inputs.tgz
@@ -168,7 +172,11 @@ hls4ml:
   extends:
     - .template
   stage: hls4ml
-  needs: [train]
+  needs:
+    - job: train
+      optional: true
+    - job: train_basic_plots
+      optional: true
   script:
   - source activate tagger
   - cd output/baseline/model
@@ -228,7 +236,13 @@ profile:
   variables:
     KUBERNETES_MEMORY_REQUEST: 8Gi
     KUBERNETES_CPU_REQUEST: 2
-  needs: [emulate,train,hls4ml]
+  needs:
+    - job: train
+      optional: true
+    - job: train_basic_plots
+      optional: true
+    - job: emulate
+    - job: hls4ml
   script:
   - source activate tagger
   - mkdir data
@@ -257,17 +271,7 @@ upload_new_model:
   variables:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
-<<<<<<< HEAD
-  needs:
-    job: emulation-evaluate,hls4ml,train,evaluate,profile
-    optional : true
-<<<<<<< HEAD
-  dependencies: [emulation-evaluate,hls4ml,train,evaluate,profile]
-=======
->>>>>>> 313aace (Update ml_pipeline.yml to have tag flag)
-=======
   needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
->>>>>>> fc8e18a (Do train plots only)
   rules:
     - if: $RERUN_ON_TAG == "False"
   before_script:
@@ -318,7 +322,14 @@ upload_tagged_model:
   variables:
     KUBERNETES_MEMORY_REQUEST: 4Gi
     KUBERNETES_CPU_REQUEST: 1
-  needs: [emulation-evaluate,hls4ml,train,evaluate,profile]
+    needs:
+    - job: train_basic_plots
+      optional: true
+    - job: emulate
+    - job: hls4ml
+    - job: emulation-evaluate
+    - job: evaluate
+    - job: profile
   rules:
     - if: $RERUN_ON_TAG == "True"
   before_script:
