quotes for rerun on tag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,5 +31,5 @@ DeepSet:new_samples_baseline_5param_extended_trk:
     SCRAM_ARCH: 'el9_amd64_gcc12'
     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
-    RERUN_ON_TAG: True 
+    RERUN_ON_TAG: 'True' 
     TAG: v0.0.0
