--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -27,7 +27,7 @@ variables:
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
     MODEL_LOCATION: ${EOS_STORAGE_DIR}/tags/${TAG}/model
     RERUN_ON_TAG: 'True'
-    TAG: v0.0.0
+    TAG: 'v0.0.0'
 
 .template:
   image: gitlab-registry.cern.ch/ml_l1/ops/docker-images/mamba_jettagger:latest
