--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,4 +32,4 @@ DeepSet:new_samples_baseline_5param_extended_trk:
     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
     RERUN_ON_TAG: 'True' 
-    TAG: v0.0.0
+    TAG: 'v0.0.0'
