--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -193,7 +193,9 @@ synth:
     - fpga-large
   image: registry.cern.ch/ci4fpga/vivado:2023.2
   stage: synth
-  needs: [hls4ml]
+  needs: 
+    - job: hls4ml
+      optional: true
   script:
     - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
@@ -218,7 +220,9 @@ emulation-evaluate:
     - job: train_basic_plots
       optional: true
     - job: emulate
+      optional: true
     - job: hls4ml
+      optional: true
   script:
   - mkdir data
   - cd data
@@ -248,7 +252,9 @@ profile:
     - job: train_basic_plots
       optional: true
     - job: emulate
+      optional: true
     - job: hls4ml
+      optional: true
   script:
   - source activate tagger
   - mkdir data
@@ -332,10 +338,15 @@ upload_tagged_model:
     - job: train_basic_plots
       optional: true
     - job: emulate
+      optional: true
     - job: hls4ml
+      optional: true
     - job: emulation-evaluate
+      optional: true
     - job: evaluate
+      optional: true
     - job: profile
+      optional: true
   rules:
     - if: $RERUN_ON_TAG == "True"
   before_script:
