--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -191,7 +191,9 @@ synth:
     - fpga-large
   image: registry.cern.ch/ci4fpga/vivado:2023.2
   stage: synth
-  needs: [hls4ml]
+  needs: 
+    - job: hls4ml
+      optional: true
   script:
     - cd tagger/firmware/L1TSC4NGJetModel
     - vitis_hls -f build_prj.tcl
@@ -216,7 +218,9 @@ emulation-evaluate:
     - job: train_basic_plots
       optional: true
     - job: emulate
+      optional: true
     - job: hls4ml
+      optional: true
   script:
   - mkdir data
   - cd data
@@ -246,7 +250,9 @@ profile:
     - job: train_basic_plots
       optional: true
     - job: emulate
+      optional: true
     - job: hls4ml
+      optional: true
   script:
   - source activate tagger
   - mkdir data
@@ -279,9 +285,13 @@ upload_new_model:
     - job: train
       optional: true
     - job: hls4ml
+      optional: true
     - job: emulation-evaluate
+      optional: true
     - job: evaluate
+      optional: true
     - job: profile
+      optional: true
   rules:
     - if: $RERUN_ON_TAG == "False"
   before_script:
