--- a/CI/cmssw.yml
+++ b/CI/cmssw.yml
@@ -2,8 +2,9 @@ emulate:
   tags: [ k8s-cvmfs ]
   image: gitlab-registry.cern.ch/cms-cloud/cmssw-docker/al9-cms:latest
   stage: emulate
-  needs : [hls4ml]
-  dependencies : [hls4ml]
+  needs : 
+    - jobs: hls4ml
+      optional: true
   before_script:
     #- yum install -q -y python3 python3-virtualenv mesa-libGL-devel mesa-libGLU-devel libXpm-devel openssl-devel ncurses-compat-libs 
     - source /cvmfs/grid.cern.ch/etc/profile.d/setup-cvmfs-ui.sh
