--- a/CI/cmssw.yml
+++ b/CI/cmssw.yml
@@ -4,6 +4,7 @@ emulate:
   stage: emulate
   needs: 
     - job: hls4ml
+      optional: true
   before_script:
     #- yum install -q -y python3 python3-virtualenv mesa-libGL-devel mesa-libGLU-devel libXpm-devel openssl-devel ncurses-compat-libs 
     - source /cvmfs/grid.cern.ch/etc/profile.d/setup-cvmfs-ui.sh
