--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,9 @@ include:
   - local: "CI/template.yml"
 
 # Name = Name of child pipeline
-# Inputs = Which input configuration to ise
+# Inputs = Which input configuration to use
+# N_PARAMS = Number of tracking parameters for the track fit
+# TRACK_ALGO = Tracking Algorithm, baseline or extended
 # TRAIN = Which dataset to use for training
 # MINBIAS = Which MinBias to use for rate calculations
 # BBBB = Which dataset to use for HH->BBBB efficiency studies
@@ -16,6 +18,8 @@ DeepSet:baseline_4param:
    variables:
      Name: baseline_4param
      Inputs: baseline
+     N_PARAMS: 4
+     TRACK_ALGO: baseline
      TRAIN: All200.root
      MINBIAS: MinBias_PU200.root
      BBBB: ggHHbbbb_PU200.root
@@ -34,6 +38,8 @@ DeepSet:baseline_5param:
    variables:
      Name: baseline_5param
      Inputs: baseline
+     N_PARAMS: 5
+     TRACK_ALGO: baseline
      TRAIN: All200.root
      MINBIAS: MinBias_PU200.root
      BBBB: ggHHbbbb_PU200.root
@@ -47,14 +53,16 @@ DeepSet:baseline_5param:
      EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
      EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
      SCRAM_ARCH: 'el9_amd64_gcc12'
-     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
-     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
+     CMSSW_VERSION: 'CMSSW_15_1_0_pre1'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:15_1_pre1_L1TSC4NGJetTagger'
 
 DeepSet:baseline_4param_extended_trk:
   extends: .ml_pipeline
   variables:
      Name: baseline_4param_extended_trk
      Inputs: baseline
+     N_PARAMS: 4
+     TRACK_ALGO: extended
      TRAIN: All200.root
      MINBIAS: MinBias_PU200.root
      BBBB: ggHHbbbb_PU200.root
@@ -68,14 +76,16 @@ DeepSet:baseline_4param_extended_trk:
      EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
      EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
      SCRAM_ARCH: 'el9_amd64_gcc12'
-     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
-     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
+     CMSSW_VERSION: 'CMSSW_15_1_0_pre1'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:15_1_pre1_L1TSC4NGJetTagger'
 
 DeepSet:baseline_5param_extended_trk:
   extends: .ml_pipeline
   variables:
      Name: baseline_5param_extended_trk
      Inputs: baseline
+     N_PARAMS: 5
+     TRACK_ALGO: extended
      TRAIN: All200.root
      MINBIAS: MinBias_PU200.root
      BBBB:  ggHHbbbb_PU200.root
@@ -89,14 +99,16 @@ DeepSet:baseline_5param_extended_trk:
      EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
      EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
      SCRAM_ARCH: 'el9_amd64_gcc12'
-     CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
-     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
+     CMSSW_VERSION: 'CMSSW_15_1_0_pre1'
+     CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:15_1_pre1_L1TSC4NGJetTagger'
 
 DeepSet:new_samples_baseline_5param_extended_trk:
   extends: .ml_pipeline
   variables:
     Name: new_samples_baseline_5param_extended_trk
     Inputs: baseline
+    N_PARAMS: 5
+    TRACK_ALGO: extended
     TRAIN: All200.root
     MINBIAS: MinBias_PU200.root
     BBBB: GluGluHHTo4B_PU200.root
@@ -110,5 +122,5 @@ DeepSet:new_samples_baseline_5param_extended_trk:
     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/pipeline${CI_PIPELINE_ID}
     EOS_STORAGE_DATADIR: branches/${CI_COMMIT_REF_SLUG}/${Name}/TrainingFiles
     SCRAM_ARCH: 'el9_amd64_gcc12'
-    CMSSW_VERSION: 'CMSSW_14_2_0_pre2'
-    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:14_2_pre2_L1TSC4NGJetTagger'
+    CMSSW_VERSION: 'CMSSW_15_1_0_pre1'
+    CMSSW_L1CT: 'CMS-L1T-Jet-Tagging:15_1_pre1_L1TSC4NGJetTagger'
