--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -64,11 +64,11 @@ data:
   - eos cp $EOS_DATA_DIR/${SIGNAL}.root .
   - cd ..
   - python tagger/train/train.py --make-data -i data/${TRAIN} --tree $NTUPLE_TREE -sig $SIGNAL
-  #- tar -cf training_data_$Inputs.tgz training_data
+  - tar -cf training_data_$Inputs.tgz training_data
   - tar -cf signal_process_data.tgz signal_process_data
   - export EOS_MGM_URL=root://eosproject.cern.ch
   - eos mkdir -p ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}
-  #- eos cp training_data_$Inputs.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}
+  - eos cp training_data_$Inputs.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}
   - eos cp signal_process_data.tgz ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}
 
 train:
@@ -80,9 +80,9 @@ train:
       optional: true
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
-  - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/signal_process_data.tgz .
+  #- eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/signal_process_data.tgz .
   - tar -xf training_data_$Inputs.tgz
-  - tar -xf signal_process_data.tgz
+  #- tar -xf signal_process_data.tgz
   - source activate tagger
   - ./CI/run_training.sh $RERUN_ON_TAG
   artifacts:
