Comment out ngt machine

--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -75,7 +75,7 @@ train:
   extends:
     - .template
   stage: train
-  tags: [cern-nextgen-h100]
+  #tags: [cern-nextgen-h100]
   needs:
     - job : data
       optional: true
