--- a/CI/ml_pipeline.yml
+++ b/CI/ml_pipeline.yml
@@ -18,6 +18,7 @@ variables:
     Name:  baseline_4_params
     Inputs: baseline
     TRAIN: All200.root
+    NTUPLE_TREE: outnano/Jets
     EOS_DATA_DIR: /eos/cms/store/cmst3/group/l1tr/sewuchte/l1teg/fp_jettuples_090125/
     EOS_STORAGE_DIR: /eos/cms/store/cmst3/group/l1tr/MultiJetTagger
     EOS_STORAGE_SUBDIR: branches/${CI_COMMIT_REF_SLUG}/pipeline${CI_PIPELINE_ID}
@@ -81,9 +82,7 @@ train:
       optional: true
   script:
   - eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/training_data_$Inputs.tgz .
-  #- eos cp ${EOS_STORAGE_DIR}/${EOS_STORAGE_DATADIR}/signal_process_data.tgz .
   - tar -xf training_data_$Inputs.tgz
-  #- tar -xf signal_process_data.tgz
   - source activate tagger
   - ./CI/run_training.sh $RERUN_ON_TAG
   artifacts:
